@@ -17,4 +17,4 @@ Thoughts, anyone?  --[[KarlMW]]
 We'd also very much like to have an option to display the title of the page instead of the filename in the map plugin. --Andrew
 
 There's a patch implementing this in [[debbug 484510]]. It needs a few fixes
-before I merge it. --[[Joey]]
+before I merge it. Now applied. --[[Joey]]
