@@ -14,7 +14,8 @@ We're looking for the following "standard" wiki features for some of our git-dis
 
 - Some cleanups on other plugins:
    - Add the ability to use the meta title to the map plugin.
-     > Patch [[exists|plugins/map/discussion]], just needs some cleanup. --[[Joey]]
+     > Patch [[exists|plugins/map/discussion]], just needs some cleanup.
+     > Now done. --[[Joey]]
 
 ----
 Looking for a part-time ikiwiki developer
